2012-11-06 Alex Koutsman <alex.koutsman@cern.ch>
	* src/Utils.cxx: clean up of DecomposeWS
	* src/Utils.h: addition of some functions (incomplete functionality)
	* src/FitConfig.h: add function addSample(samplename, color)
	* set default ROOT version to 5.34.02 (small configuration bug in 5.34.03)
	
2012-11-01  Zach Marshall <zach.marshall@cern.ch>
	* src/Utils.cxx: Allow white samples
	* python/prepareHistos.py: Handle negative QCD bins safely
	* python/configManager.py: QCD normalization in the same region is the same, independent of plotting
	* python/sample.py: Protecting against strings being put in as numbers for systematics
	* python/channel.py, python/fitConfig.py: Moving to directory-based output structure
	* docs/todo: Updating
	* src/toy_utils.cxx: Protecting against additional fit failure modes, loosening cov. matrix quality cut
	* macros/Examples/p-values/compute_p0.C: Generic script from Aaron Armbruster for computing p-values
	* macros/Examples/upperlimit/upperlimit.C: Modifications for stability and quiet from Aaron A.
	* setup.sh: Moving gcc and python setups outside of ROOTSYS if to get batch running working
	* macros/contourplot/makelistfiles.C: CollectAndWriteHypoTestResults not in Combination namespace any more
	* macros/contourplot/contourmacros/SUSY_m0_vs_m12_all_withBand_cls.C: Cleanup and common use of HistFitterUser
	* macros/contourplot/makecontourhists.C: Cleanup and demonstrating repeated use in a nicer way
	* src/Utils.cxx: Fixing compiler warnings - note that you should not mix Logger/GEndl and cout/endl

2012-11-02 Max Baak <mbaak@cern.ch>
	M       Utils.cxx
	M       Utils.h
	* Turn on again PlotPdfSumComponents (functions by Alex)

2012-10-25 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* Fix a segfault occuring in ConfigMgr.cxx when using an empty region in
	  combination with the theory band. w->var("alpha_SigXSec") could end up
	  being NULL

2012-10-23 Geert-Jan Besjes <geert-jan.besjes@cern.ch>